--- a/src/site/apt/examples/selective-project-info-reports.apt.vm
+++ b/src/site/apt/examples/selective-project-info-reports.apt.vm
@@ -1,9 +1,7 @@
  ------
  Run Selective Reports
  ------
- Johnny R. Ruiz III
- <jruiz@exist.com>
- Pete Marvin King
+ Johnny R. Ruiz III, Pete Marvin King
  ------
  2009-07-14
  ------
