--- a/src/site/apt/examples/selective-reports.apt.vm
+++ b/src/site/apt/examples/selective-reports.apt.vm
@@ -44,11 +44,11 @@ Run Selective Reports
           <reportSet>
             <reports>
               <report>dependencies</report>
-              <report>project-team</report>
-              <report>mailing-list</report>
-              <report>cim</report>
-              <report>issue-tracking</report>
-              <report>license</report>
+              <report>team</report>
+              <report>mailing-lists</report>
+              <report>ci-management</report>
+              <report>issue-management</report>
+              <report>licenses</report>
               <report>scm</report>
             </reports>
           </reportSet>
