--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -90,15 +90,15 @@ ${project.name}
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<cim>>>            | <<<ci-management>>>    | <<<integration.html>>>       | <<<ci-management.html>>>    |
 *----------------------+------------------------+------------------------------+-----------------------------+
-| <<<mailing-list>>>   | <<<mailing-lists>>>    | <<<mail-lists.html>>>        | <<<mailing-lists.html>>>    |
+| <<<mailing-list>>>   | <<<mailing-lists>>>    | <<<mailing-lists.html>>>        | <<<mailing-lists.html>>>    |
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<project-team>>>   | <<<team>>>             | <<<team-list.html>>>         | <<<team.html>>>             |
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<license>>>        | <<<licenses>>>         | <<<license.html>>>           | <<<licenses.html>>>         |
 *----------------------+------------------------+------------------------------+-----------------------------+
-| <<<issue-tracking>>> | <<<issue-management>>> | <<<issue-tracking.html>>>    | <<<issue-management.html>>> |
+| <<<issue-management>>> | <<<issue-management>>> | <<<issue-management.html>>>    | <<<issue-management.html>>> |
 *----------------------+------------------------+------------------------------+-----------------------------+
-| <<<scm>>>            | \u2013                 | <<<source-repository.html>>> | <<<scm.html>>>              |
+| <<<scm>>>            | \u2013                 | <<<scm.html>>> | <<<scm.html>>>              |
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<summary>>>        | \u2013                 | <<<project-summary.html>>>   | <<<summary.html>>>          |
 *----------------------+------------------------+------------------------------+-----------------------------+
@@ -111,16 +111,16 @@ ${project.name}
   specific use cases are described in the examples given below.
 
   In case you still have questions regarding the plugin's usage, please have a look at the {{{./faq.html}FAQ}} and feel
-  free to contact the {{{./mail-lists.html}user mailing list}}. The posts to the mailing list are archived and could
+  free to contact the {{{./mailing-lists.html}user mailing list}}. The posts to the mailing list are archived and could
   already contain the answer to your question as part of an older thread. Hence, it is also worth browsing/searching
-  the {{{./mail-lists.html}mail archive}}.
+  the {{{./mailing-lists.html}mail archive}}.
 
   If you feel like the plugin is missing a feature or has a defect, you can fill a feature request or bug report in our
-  {{{./issue-tracking.html}issue tracker}}. When creating a new issue, please provide a comprehensive description of your
+  {{{./issue-management.html}issue tracker}}. When creating a new issue, please provide a comprehensive description of your
   concern. Especially for fixing bugs it is crucial that the developers can reproduce your problem. For this reason,
   entire debug logs, POMs or most preferably little demo projects attached to the issue are very much appreciated.
   Of course, patches are welcome, too. Contributors can check out the project from our
-  {{{./source-repository.html}source repository}} and will find supplementary information in the
+  {{{./scm.html}source repository}} and will find supplementary information in the
   {{{http://maven.apache.org/guides/development/guide-helping.html}guide to helping with Maven}}.
 
 * Examples
