fixed old file names

--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -90,15 +90,15 @@ ${project.name}
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<cim>>>            | <<<ci-management>>>    | <<<integration.html>>>       | <<<ci-management.html>>>    |
 *----------------------+------------------------+------------------------------+-----------------------------+
-| <<<mailing-list>>>   | <<<mailing-lists>>>    | <<<mailing-lists.html>>>        | <<<mailing-lists.html>>>    |
+| <<<mailing-list>>>   | <<<mailing-lists>>>    | <<<mail-lists.html>>>        | <<<mailing-lists.html>>>    |
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<project-team>>>   | <<<team>>>             | <<<team-list.html>>>         | <<<team.html>>>             |
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<license>>>        | <<<licenses>>>         | <<<license.html>>>           | <<<licenses.html>>>         |
 *----------------------+------------------------+------------------------------+-----------------------------+
-| <<<issue-management>>> | <<<issue-management>>> | <<<issue-management.html>>>    | <<<issue-management.html>>> |
+| <<<issue-management>>> | <<<issue-management>>> | <<<issue-tracking.html>>>    | <<<issue-management.html>>> |
 *----------------------+------------------------+------------------------------+-----------------------------+
-| <<<scm>>>            | \u2013                 | <<<scm.html>>> | <<<scm.html>>>              |
+| <<<scm>>>            | \u2013                 | <<<source-repository.html>>> | <<<scm.html>>>              |
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<summary>>>        | \u2013                 | <<<project-summary.html>>>   | <<<summary.html>>>          |
 *----------------------+------------------------+------------------------------+-----------------------------+
