[MPIR-415] Wrong old goal name in "Incompatibility Notice" table in website

--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -96,7 +96,7 @@ ${project.name}
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<license>>>        | <<<licenses>>>         | <<<license.html>>>           | <<<licenses.html>>>         |
 *----------------------+------------------------+------------------------------+-----------------------------+
-| <<<issue-management>>> | <<<issue-management>>> | <<<issue-tracking.html>>>    | <<<issue-management.html>>> |
+| <<<issue-tracking>>> | <<<issue-management>>> | <<<issue-tracking.html>>>    | <<<issue-management.html>>> |
 *----------------------+------------------------+------------------------------+-----------------------------+
 | <<<scm>>>            | \u2013                 | <<<source-repository.html>>> | <<<scm.html>>>              |
 *----------------------+------------------------+------------------------------+-----------------------------+
