--- a/src/site/apt/examples/scm-report.apt.vm
+++ b/src/site/apt/examples/scm-report.apt.vm
@@ -24,7 +24,7 @@
 ~~ under the License.
 
 ~~ NOTE: For help with the syntax of this file, see:
-~~ http://maven.apache.org/doxia/references/apt-format.html
+~~ https://maven.apache.org/doxia/references/apt-format.html
 
 Customize the SCM Report
 
@@ -75,7 +75,7 @@ How to exclude SCM anonymous access info?
   <scm>
     <!-- Unspecified <connection/> tag -->
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-project-info-reports-plugin/</developerConnection>
-    <url>http://svn.apache.org/viewvc/maven/plugins/trunk/maven-project-info-reports-plugin/</url>
+    <url>https://svn.apache.org/viewvc/maven/plugins/trunk/maven-project-info-reports-plugin/</url>
   </scm>
   ...
 </project>
